--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     - name: checkout
     - uses: actions/checkout@v2
 
+    - name: show os version
+    - run: cat /etc/redhat-release
+    
     - name: Run a one-line script
       run: echo Hello, world!
 
