--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: show os version
-    - run: cat /etc/redhat-release
-    
+      run: cat /etc/redhat-release
+
     - name: Run a one-line script
       run: echo Hello, world!
 
