--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,23 @@ jobs:
   job-vm:
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: Run on VM
+        run: |
           echo This job does not specify a container.
           echo It runs directly on the virtual machine.
-        name: Run on VM
   
   job-container:
     runs-on: ubuntu-latest
     container: centos:7
     steps:
-      - run: |
-          echo This job does specify a container.
-          echo It runs in the container instead of the VM.
-        name: Run in container
 
-      - run: |
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: Run in container
+        run: |
           cat /etc/redhat-release
           echo It runs in the container instead of the VM.
-        name: Run in container
