--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,15 @@ jobs:
   job-vm:
     runs-on: ubuntu-latest
     steps:
+      - name: install b2
+        run: |
+          wget https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
+          tar -xzf boost_build_centos7.tar.gz
+          rm boost_build_centos7.tar.gz
+          export PATH=$PATH:$PWD/boost_build_centos7/bin
+          b2
+          g++ --versoin
+
       - name: Check out repository
         uses: actions/checkout@v2
 
@@ -18,6 +27,14 @@ jobs:
     runs-on: ubuntu-latest
     container: centos:7.5.1804
     steps:
+        - name: install b2
+        run: |
+          wget https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
+          tar -xzf boost_build_centos7.tar.gz
+          rm boost_build_centos7.tar.gz
+          export PATH=$PATH:$PWD/boost_build_centos7/bin
+          b2
+          g++ --versoin
 
       - name: Check out repository
         uses: actions/checkout@v2
