--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: install b2
         run: |
-          wget https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
+          wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
           export PATH=$PATH:$PWD/boost_build_centos7/bin
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: install b2
         run: |
+          sudo yum install wget
+          curl --version
           wget https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
