--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
       - name: Run on VM
         run: |
           ls -la .
-          export PATH=$PATH:$PWD/boost_build_centos7/bin
-          b2
+          $PWD/boost_build_centos7/bin/b2
           echo This job does not specify a container.
           echo It runs directly on the virtual machine.
   
@@ -31,12 +30,12 @@ jobs:
     steps:
       - name: install b2
         run: |
-          yum install wget
-          curl --version
+          yum install -y wget
           wget https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
-          export PATH=$PATH:$PWD/boost_build_centos7/bin
+          PATH=$PATH:$PWD/boost_build_centos7/bin
+          echo $PATH
           b2 --version
           ls -la .
 
