--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,26 +3,26 @@ name: Docker Test
 on: [push]
 
 jobs:
-  job-vm:
-    runs-on: ubuntu-latest
-    steps:
-      - name: install b2
-        run: |
-          wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
-          tar -xzf boost_build_centos7.tar.gz
-          rm boost_build_centos7.tar.gz 
-          g++ --version
-          ls -la .
+  # job-vm:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: install b2
+  #       run: |
+  #         wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
+  #         tar -xzf boost_build_centos7.tar.gz
+  #         rm boost_build_centos7.tar.gz 
+  #         g++ --version
+  #         ls -la .
 
-      - name: Check out repository
-        uses: actions/checkout@v2
+  #     - name: Check out repository
+  #       uses: actions/checkout@v2
 
-      - name: Run on VM
-        run: |
-          ls -la .
-          $PWD/boost_build_centos7/bin/b2
-          echo This job does not specify a container.
-          echo It runs directly on the virtual machine.
+  #     - name: Run on VM
+  #       run: |
+  #         ls -la .
+  #         $PWD/boost_build_centos7/bin/b2
+  #         echo This job does not specify a container.
+  #         echo It runs directly on the virtual machine.
   
   job-container:
     runs-on: ubuntu-latest
@@ -30,10 +30,12 @@ jobs:
     steps:
       - name: install b2
         run: |
-          yum install -y wget
-          wget https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
+          yum install -y -q wget
+          wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
+          echo $PWD
+          echo $PATH
           PATH=$PATH:$PWD/boost_build_centos7/bin
           echo $PATH
           b2 --version
