--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
     runs-on: ubuntu-latest
     container: centos:7.5.1804
     steps:
+
+      - name: Check out repository
+        uses: actions/checkout@v2
+
       - name: install b2
         run: |
           yum install -y -q wget
@@ -39,14 +43,12 @@ jobs:
           echo $PATH
           ls -la .
 
-      - name: Check out repository
-        uses: actions/checkout@v2
-
       - name: Run in container
         run: |
           cat /etc/redhat-release
           ls -la .
           echo $PWD
+          PATH=$PATH:$PWD/boost_build_centos7/bin
           b2
 
       
