--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,16 +32,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: install b2
+      - name: install base software
         run: |
-          yum install -y -q wget
+          yum -q install -y wget gcc-c++
+
+      - name: install base software
+        run: |
           wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
-          echo $PWD
-          PATH=$PATH:$PWD/boost_build_centos7/bin
-          echo $PATH
-          ls -la .
 
       - name: Run in container
         run: |
