--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,26 @@ name: Docker Test
 on: [push]
 
 jobs:
-  # job-vm:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: install b2
-  #       run: |
-  #         wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
-  #         tar -xzf boost_build_centos7.tar.gz
-  #         rm boost_build_centos7.tar.gz 
-  #         g++ --version
-  #         ls -la .
+  job-ubuntu_latest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
 
-  #     - name: Check out repository
-  #       uses: actions/checkout@v2
+      - name: install b2
+        run: |
+          wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
+          tar -xzf boost_build_centos7.tar.gz
+          rm boost_build_centos7.tar.gz
 
-  #     - name: Run on VM
-  #       run: |
-  #         ls -la .
-  #         $PWD/boost_build_centos7/bin/b2
-  #         echo This job does not specify a container.
-  #         echo It runs directly on the virtual machine.
+      - name: Run on VM
+        run: |
+          ls -la .
+          echo $PWD
+          PATH=$PATH:$PWD/boost_build_centos7/bin
+          b2 --toolset=gcc -j8
   
-  job-container:
+  job-docker_centos_7.5:
     runs-on: ubuntu-latest
     container: centos:7.5.1804
     steps:
@@ -48,4 +46,4 @@ jobs:
           ls -la .
           echo $PWD
           PATH=$PATH:$PWD/boost_build_centos7/bin
-          b2
+          b2 --toolset=gcc -j8
