--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           PATH=$PATH:$PWD/boost_build_centos7/bin
           b2 --toolset=gcc -j8
   
-  job-docker_centos_7.5:
+  job-docker_centos_7_5:
     runs-on: ubuntu-latest
     container: centos:7.5.1804
     steps:
