--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,20 @@ jobs:
           wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
+          
+      - name: install cpplint
+        run: |
+          wget -q https://github.com/cpplint/cpplint/archive/1.4.5.tar.gz
+          tar xzf 1.4.5.tar.gz
 
-      - uses: Trass3r/setup-cpp@master
+      - name: cpplint check
+          cpplint-1.4.5/cpplint.py --linelength=120 --counting=detailed $(find . -name *.h -or -name *.cpp | grep -vE "^./yats/3rd"/" )
+
+
+      - name: install gcc filter
+        uses: Trass3r/setup-cpp@master
         
-      - name: Run in container
+      - name: build
         run: |
           cat /etc/redhat-release
           ls -la .
