--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: cpplint check
         run: |
-          cpplint-1.4.5/cpplint.py --linelength=120 --counting=detailed $(find . -name *.h -or -name *.cpp | grep -vE "^./yats/3rd"/" )
+          cpplint-1.4.5/cpplint.py --linelength=120 --counting=detailed $(find . -name *.cpp | grep -vE "^./yats/3rd"/" )
 
 
       - name: install gcc filter
