--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,21 @@ name: Docker Test
 on: [push]
 
 jobs:
+  job-code-quanity-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: install cpplint
+        run: |
+          wget -q https://github.com/cpplint/cpplint/archive/1.4.5.tar.gz
+          tar xzf 1.4.5.tar.gz
+
+      - name: cpplint check
+        run: |  
+          cpplint-1.4.5/cpplint.py --linelength=120 --counting=detailed $(find . -name *.h -or -name *.cpp | grep -v "^./cpplint-1.4.5" )
+
   job-ubuntu_latest:
     runs-on: ubuntu-latest
     steps:
@@ -39,16 +54,6 @@ jobs:
           wget -q https://github.com/samueldeng/boost_build/releases/download/v1.0/boost_build_centos7.tar.gz
           tar -xzf boost_build_centos7.tar.gz
           rm boost_build_centos7.tar.gz
-          
-      - name: install cpplint
-        run: |
-          wget -q https://github.com/cpplint/cpplint/archive/1.4.5.tar.gz
-          tar xzf 1.4.5.tar.gz
-
-      - name: cpplint check
-        run: |
-          cpplint-1.4.5/cpplint.py --linelength=120 --counting=detailed $(find . -name *.h -or -name *.cpp | grep -vE "^./yats/3rd/" | grep -vE "^./boost_build_centos7" | grep -vE "^./cpplint-1.4.5" )
-
 
       - name: install gcc filter
         uses: Trass3r/setup-cpp@master
@@ -62,4 +67,5 @@ jobs:
           echo $PWD
           PATH=$PATH:$PWD/boost_build_centos7/bin
           b2 --toolset=gcc -j8
-      
+  
+  
